--- a/packages/hoppscotch-desktop/src-tauri/Cargo.toml
+++ b/packages/hoppscotch-desktop/src-tauri/Cargo.toml
@@ -22,7 +22,9 @@ tauri = { version = "2", features = [] }
 tauri-plugin-shell = { version = "2", features = [] }
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = [] }
-tauri-plugin-hoppscotch-appload = { path = "../tauri-plugin-hoppscotch-appload" }
-tracing = "0.1.40"
+tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tauri-plugin-store = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-hoppscotch-appload = { path = "../tauri-plugin-hoppscotch-appload" }
