--- a/packages/hoppscotch-desktop/package.json
+++ b/packages/hoppscotch-desktop/package.json
@@ -19,7 +19,7 @@
     "@tauri-apps/plugin-shell": "^2",
     "@tauri-apps/plugin-store": "2.1.0",
     "@vueuse/core": "11.1.0",
-    "tauri-plugin-hoppscotch-appload-api": "file:tauri-plugin-hoppscotch-appload",
+    "@hoppscotch/plugin-appload": "github:CuriousCorrelation/tauri-plugin-hoppscotch-appload",
     "vue": "^3.3.4",
     "vue-router": "4.4.5",
     "vue-tippy": "6.5.0"
