--- a/packages/hoppscotch-kernel/package.json
+++ b/packages/hoppscotch-kernel/package.json
@@ -63,6 +63,6 @@
   "dependencies": {
     "axios": "1.6.2",
     "fp-ts": "2.16.9",
-    "tauri-plugin-hoppscotch-relay-api": "github:CuriousCorrelation/tauri-plugin-hoppscotch-relay"
+    "@hoppscotch/plugin-relay": "github:CuriousCorrelation/tauri-plugin-hoppscotch-relay"
   }
 }
